# seed-routing

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  router_listening.puml
.github/workflows/: rust.yml
assets/: router_go_back.puml  router_go_forward.puml  router_listening.puml
examples/backbone_app/: Cargo.toml  index.html
examples/backbone_app/src/: lib.rs
examples/backbone_app/src/pages/admin/: mod.rs
examples/backbone_app/src/pages/dashboard/: mod.rs  statistics.rs
examples/backbone_app/src/pages/dashboard/tasks/: mod.rs
examples/step_1/: Cargo.toml  index.html
examples/step_1/src/: lib.rs
examples/step_2/: Cargo.toml  index.html
examples/step_2/src/: lib.rs
examples/step_3/: index.html
examples/step_3/src/: lib.rs
examples/step_4/src/: lib.rs
router_derive/: Cargo.toml
router_derive/src/: builder.rs  default_route.rs  guard.rs  init.rs  lib.rs  routing.rs  view.rs
router_macro_derive/: Cargo.toml
router_macro_derive/src/: builder.rs  guard.rs  init.rs  lib.rs  modules.rs  root.rs  routing.rs  view.rs
src/: lib.rs
src/router/: default_route.rs  mod.rs  model.rs  path.rs  url.rs  view.rs
tests/: router.rs  url.rs  web.rs
tests/router/: mod.rs  with_url.rs
tests/router/with_routing/: mod.rs
tests/routing_module/: mod.rs
tests/routing_module/pages/: admin.rs  dashboard.rs  mod.rs  other.rs  profile.rs
