[package]
name = "seed_routing"
description = "Routing management for Seed"
version = "0.0.1"
authors = ["arn-the-long-beard <arn.menant@gmail.com>"]
edition = "2018"
repository = "https://github.com/arn-the-long-beard/seed-routing"
license = "MIT"
#homepage = ""
#documentation = ""
readme = "README.md"
keywords = ["wasm", "webassembly", "frontend", "framework", "web" , "routing", "navigation" ]
categories = ["wasm", "web-programming"]
exclude = [
    "assets",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib" ,"rlib"]

[dependencies]
seed = { git = "https://github.com/seed-rs/seed.git" }
serde = "1.0.115"
serde_json = "1.0.51"
heck="0.3.1"
router_macro_derive =  { path = "./router_macro_derive"}


[dependencies.web-sys]
version = "0.3"


[dev-dependencies]
wasm-bindgen-test = "0.3.17"

[profile.release]
lto = true

opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3']

