[package]
name = "router_macro_derive"
version = "0.1.0"
authors = ["arn-the-long-beard <arn.menant@gmail.com>"]
edition = "2018"


[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.7"
syn = { version =  "1.0.40" ,  features = ["full"]}
heck="0.3.1"
proc-macro-error = "^1"
proc-macro2 = "^1"
convert_case = "^0.4"
